--- a/css/oki.css
+++ b/css/oki.css
@@ -12,11 +12,12 @@ h2{
 	color: grey;
 	border: 2px solid black;
 	background-color: lightyellow;
-	margin: 5px;
 }
 
 h1, h2{
 	font-family: 'Indie Flower', cursive;
+	max-width: 75%;
+	margin: 0 auto;	
 	text-align: center;
 }
 
@@ -40,7 +41,7 @@ header img{
 
 main{
 	margin: 0 auto;
-	max-width: 800px;
+	padding-top: 10px;
 }
 
 main p{
